--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "composer-plugin-api": "^1.1",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "puzzlehttp/puzzle": "^4.2",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
